new implementation of BinaryTree with STM support